--- a/web/header.html
+++ b/web/header.html
@@ -1,5 +1,5 @@
 <div class="title-block">
-  <h1 id="title">Photo Gallery</h1>
+  <h1 id="title">Photo Gallery <i class="fa fa-file-image-o" aria-hidden="true"></i></h1>
   <h3 id="subtitle">IISSI-2 - University of Seville</h3>
   <div class="navigation">
     <a href="index.html">Recent photos</a>
