--- a/web/index.html
+++ b/web/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/font-awesome.min.css">
   <script src="/js/libs/bootstrap.min.js"></script>
+  <script src="js/index.js" type="module"></script>
 </head>
 
 <body class="dark">
@@ -222,6 +223,13 @@ navigation">
           </div>
         </div>
       </div>
+    </div>
+    <div class="container mt-4">
+      <h3>DOM Manipulation</h3>
+      <div class="row text-center">
+        <div id="dom-test"></div>
+      </div>
+      <div class="row text-center" id="gallery">Hola</div>
     </div>
   </div>
   <script>
