--- a/web/photo_detail.html
+++ b/web/photo_detail.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/font-awesome.min.css">
     <script src="/js/libs/bootstrap.min.js"></script>
+    <script src="js/photo_detail.js" type="module"></script>
 </head>
 
 <body class="dark">
@@ -110,6 +111,8 @@
                 <button type="submit" class="btn btn-primary">Register</button>
             </div>
         </div>
+    </div>
+    <div class="col-md-9" id="photo-details-column">
     </div>
 </body>
 
