--- a/web/index.html
+++ b/web/index.html
@@ -5,10 +5,10 @@
   <title>Example page</title>
   <link rel="icon" href="/images/favicon.ico" />
   <link rel="stylesheet" href="/css/style.css">
-  <script src="/js/utils/include.js"></script>
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/font-awesome.min.css">
+  <script src="/js/utils/include.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <script src="/js/libs/bootstrap.min.js"></script>
   <script src="js/index.js" type="module"></script>
 </head>
@@ -231,6 +231,7 @@ navigation">
       </div>
       <div class="row text-center" id="gallery">Hola</div>
     </div>
+    <button class="btn btn-primary" id="test-button">Press me!</button>
   </div>
   <script>
     include("header.html", "#page-header");
