--- a/web/register.html
+++ b/web/register.html
@@ -1,91 +1,59 @@
 <!DOCTYPE html>
 <html>
-  <head> </head>
+
+<head>
+  <script src="js/register.js" type="module"></script>
   <title>Register form</title>
-  <link
-    rel="icon"
-    href="/images/favicon.ico"
-  />
-  <body>
-    <h2>Register a new user:</h2>
-    <form>
-      <div class="input-group">
-        <label for="firstname-input">First name:</label>
-        <input
-          type="text"
-          id="firstname-input"
-          name="firstName"
-          required
-        />
-      </div>
-      <div class="input-group">
-        <label for="lastname-input">Last name:</label>
-        <input
-          type="text"
-          id="lastname-input"
-          name="lastName"
-          required
-        />
-      </div>
-      <div class="input-group">
-        <label for="email-input">Email:</label>
-        <input
-          type="email"
-          id="email-input"
-          name="email"
-          required
-        />
-      </div>
-      <div class="input-group">
-        <label for="telephone-input">Telephone:</label>
-        <select
-          name="prefix"
-          id="prefix-input"
-        >
-          <option value="34">Spain (+34)</option>
-          <option value="1">USA (+1)</option>
-          <option value="other">Other</option>
-        </select>
-        <input
-          type="text"
-          id="telephone-input"
-          name="telephone"
-          required
-        />
-      </div>
-      <div class="input-group">
-        <label for="username-input">Username:</label>
-        <input
-          type="text"
-          id="username-input"
-          name="username"
-          required
-        />
-      </div>
-      <div class="input-group">
-        <label for="password-input">Password:</label>
-        <input
-          type="password"
-          id="password-input"
-          name="password"
-          required
-        />
-      </div>
-      <div class="input-group">
-        <label for="password2-input">Repeat your password:</label>
-        <input
-          type="password2"
-          id="password2-input"
-          name="password2"
-          required
-        />
-      </div>
-      <div class="input-group">
-        <input type="submit" />
-      </div>
-    </form>
-    <a href="index.html">Return to the main page</a>
-  </body>
+  <link rel="icon" href="/images/favicon.ico" />
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/css/font-awesome.min.css">
+</head>
+
+<body class="dark">
+  <h2>Register a new user:</h2>
+  <form id="register-form">
+    <div class="input-group">
+      <label for="firstname-input">First name:</label>
+      <input type="text" id="firstname-input" name="firstName" required />
+    </div>
+    <div class="input-group">
+      <label for="lastname-input">Last name:</label>
+      <input type="text" id="lastname-input" name="lastName" required />
+    </div>
+    <div class="input-group">
+      <label for="email-input">Email:</label>
+      <input type="email" id="email-input" name="email" required />
+    </div>
+    <div class="input-group">
+      <label for="telephone-input">Telephone:</label>
+      <select name="prefix" id="prefix-input">
+        <option value="34">Spain (+34)</option>
+        <option value="1">USA (+1)</option>
+        <option value="other">Other</option>
+      </select>
+      <input type="text" id="telephone-input" name="telephone" required />
+    </div>
+    <div class="input-group">
+      <label for="username-input">Username:</label>
+      <input type="text" id="username-input" name="username" required />
+    </div>
+    <div class="input-group">
+      <label for="password-input">Password:</label>
+      <input type="password" id="password-input" name="password" required />
+    </div>
+    <div class="input-group">
+      <label for="password2-input">Repeat your password:</label>
+      <input type="password2" id="password2-input" name="password2" required />
+    </div>
+    <div class="input-group">
+      <input type="submit" />
+    </div>
+  </form>
+  <div id="errors"></div>
+  <a href="index.html">Return to the main page</a>
+</body>
+
 </html>
 
 <style>
@@ -95,11 +63,13 @@
     border-color: #999999;
     color: white;
   }
-  .input-group > label {
+
+  .input-group>label {
     display: inline-block;
     width: 200px;
     text-align: right;
   }
+
   .input-group {
     margin-bottom: 0.5em;
   }
