--- a/web/photo_detail.html
+++ b/web/photo_detail.html
@@ -11,9 +11,11 @@
     <link rel="stylesheet" href="/css/font-awesome.min.css">
     <script src="/js/libs/bootstrap.min.js"></script>
     <script src="js/photo_detail.js" type="module"></script>
+    <script src="js/libs/axios.min.js"></script>
 </head>
 
 <body class="dark">
+    <div id="errors"></div>
     <div class="container">
         <div class="row text-center">
             <div class="col-md">
